# lys-treesitter-grammar

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-lys.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lys/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLys/: lys.h
bindings/swift/TreeSitterLysTests/: TreeSitterLysTests.swift
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
