[package]
name = "tree-sitter-lys"
description = "⚜︎ A language that compiles to WebAssembly"
version = "0.0.1-2501151828"
authors = ["Michał Schwarz <mschwarz@blckcomp.com>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lys"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/lys-lang/tree-sitter-lys"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
